--- a/game.html
+++ b/game.html
@@ -17,13 +17,13 @@
 <body>
     <nav>
         <div class="logo">
-            <h4> <a href="index.htm">Kevin Tu</a></h4>
+            <h4> <a href="index.html">Kevin Tu</a></h4>
         </div>
         <ul class="navlinks">
-            <li><a href="index.htm">About</a></li>
-            <li><a href="index.htm#resume">Resume</a></li>
-            <li><a href="index.htm#project">Projects</a></li>
-            <li><a href="index.htm#footer">Contact</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html#resume">Resume</a></li>
+            <li><a href="index.html#project">Projects</a></li>
+            <li><a href="index.html#footer">Contact</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
